<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_dash">

    <fragment
        android:id="@+id/nav_dash"
        android:name="com.project.kwetu.AdminMainPage"
        android:label="@string/menu_home"
        tools:layout="@layout/activity_admin_main_page" />

    <fragment
        android:id="@+id/nav_neighbors"
        android:name="com.project.kwetu.ViewNeighbours"
        android:label="@string/menu_gallery"
        tools:layout="@layout/activity_view_neighbours" />

    <fragment
        android:id="@+id/nav_pchats"
        android:name="com.project.kwetu.ChatListFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_chat_list" />
</navigation>