<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

<com.google.android.material.textfield.TextInputLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/email_til"
    android:layout_marginTop="@dimen/marginTop"
    android:layout_marginLeft="@dimen/margin"
    android:layout_marginRight="@dimen/margin"
    >
    <EditText
        android:id="@+id/log_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_email"
        android:inputType="textEmailAddress" />
</com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/password_til"
        android:layout_below="@id/email_til"
        android:layout_marginTop="@dimen/margin"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginRight="@dimen/margin"
        app:passwordToggleEnabled="true">

    <EditText
        android:id="@+id/log_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_password"
        android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/forget_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/password_til"
        android:layout_marginLeft="@dimen/marginLeft"
        android:layout_marginTop="29dp"
        android:text="@string/Forgot_password"
        android:textColor="#3F51B5" />

    <Button
        android:id="@+id/btn_signIn"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/forget_text"
        android:layout_marginLeft="@dimen/margin_Right"
        android:layout_marginTop="58dp"
        android:background="@drawable/button_all"
        android:text="@string/log_in" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/adminPage"
        android:layout_below="@id/btn_signIn"
        android:layout_marginLeft="@dimen/adminRegButton"
        android:layout_marginTop="23dp"
        android:background="@drawable/button_all"
        android:text="@string/a_reg"/>


</RelativeLayout>