<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".user_profile">


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/relLayout1"
                    android:padding="20dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/account_prof"
                        android:textSize="25sp"
                        android:textColor="#000000"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="10dp"
                        android:id="@+id/textHeader"/>

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:id="@+id/profile_image"
                        android:layout_below="@+id/textHeader"
                        android:layout_marginTop="15dp"
                        android:layout_centerHorizontal="true"
                        android:scaleType="centerCrop"
                        android:contentDescription="@string/profile_image" />


                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_below="@+id/profile_image"
                        android:background="@drawable/grey_border_bottom"
                        android:id="@+id/relLayout2"
                        android:layout_marginTop="30dp">

                        <ImageView
                            android:layout_width="35dp"
                            android:layout_height="35dp"
                            android:layout_centerVertical="true"
                            android:src="@drawable/ic_user"
                            android:contentDescription="@string/user_pic" />

                        <EditText
                            android:id="@+id/input_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginStart="40dp"
                            android:layout_marginLeft="40dp"
                            android:background="@null"
                            android:hint="@string/name"
                            android:inputType="text"
                            android:textColor="#000000" />

                    </RelativeLayout>


                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_below="@+id/relLayout2"
                        android:background="@drawable/grey_border_bottom"
                        android:id="@+id/relLayout3">

                        <ImageView
                            android:layout_width="35dp"
                            android:layout_height="35dp"
                            android:layout_centerVertical="true"
                            android:src="@drawable/ic_phone"
                            android:contentDescription="@string/phone_pic" />

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/input_phone"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="40dp"
                            android:background="@null"
                            android:inputType="phone"
                            android:hint="@string/t_phone"
                            android:textColor="#000000"
                            android:layout_marginStart="40dp"
                            />

                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_below="@+id/relLayout3"
                        android:background="@drawable/grey_border_bottom"
                        android:id="@+id/relLayout8">

                        <ImageView
                            android:layout_width="35dp"
                            android:layout_height="35dp"
                            android:layout_centerVertical="true"
                            android:src="@drawable/ic_baseline_apartment_24"
                            android:contentDescription="@string/lock_pic" />

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/input_house"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="40dp"
                            android:background="@null"
                            android:inputType="textPassword"
                            android:hint="@string/a_house"
                            android:textColor="#000000"
                            android:layout_marginStart="40dp" />

                    </RelativeLayout>


                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_below="@+id/relLayout8"
                        android:background="@drawable/grey_border_bottom"
                        android:id="@+id/relLayout4">

                        <ImageView
                            android:layout_width="35dp"
                            android:layout_height="35dp"
                            android:layout_centerVertical="true"
                            android:src="@drawable/ic_email"/>

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/input_email"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="40dp"
                            android:background="@null"
                            android:inputType="textEmailAddress"
                            android:hint="@string/a_email"
                            android:textColor="#000000"/>

                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_below="@+id/relLayout4"
                        android:background="@drawable/grey_border_bottom"
                        android:id="@+id/relLayout5">

                        <ImageView
                            android:layout_width="35dp"
                            android:layout_height="35dp"
                            android:layout_centerVertical="true"
                            android:src="@drawable/ic_password"
                            android:contentDescription="@string/lock_pic" />

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/input_password"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="40dp"
                            android:background="@null"
                            android:inputType="textPassword"
                            android:hint="@string/pass_c"
                            android:textColor="#000000"
                            android:layout_marginStart="40dp" />

                    </RelativeLayout>

                    <Button
                        android:id="@+id/btn_logout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="35dp"
                        android:layout_below="@+id/relLayout5"
                        android:background="@drawable/button_all"
                        android:text="@string/log_out"
                        />


                    <TextView
                        android:id="@+id/change_password"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="@string/change_pass"
                        android:gravity="center"
                        android:textSize="16sp"
                        android:textColor="#009688"
                        android:layout_below="@+id/btn_logout"
                        android:layout_centerHorizontal="true"/>

                </RelativeLayout>



            </RelativeLayout>
        </ScrollView>

        <ProgressBar
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/progressBar"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="120dp"
            android:visibility="invisible"/>

    </RelativeLayout>

