<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="3dp"
    app:cardElevation="3dp"
    app:cardUseCompatPadding="true"
    app:cardBackgroundColor="#FFFFFF"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

                <ImageView
                    android:id="@+id/uPicturetv"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_face"
                    />
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">


                <TextView
                    android:id="@+id/uHouseTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/t_house"/>

                <TextView
                    android:id="@+id/uNameTv"
                    android:text="@string/name"
                    android:textSize="20sp"
                    android:textColor="#050505"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/pTimeSv"
                    android:text="33 min"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>



            </LinearLayout>

            <ImageButton
                android:id="@+id/moreBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:src="@drawable/ic_more_black"/>

        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/pTitleTv"
            android:textSize="16sp"
            android:textStyle="bold"
            android:autoLink="all"
            android:text="@string/title"/>

        <TextView
            android:id="@+id/pDescriptionTv"
            android:text="@string/issue_description"
            android:textColor="#050505"
            android:layout_width="match_parent"
            android:autoLink="all"
            android:layout_height="wrap_content"/>

        <ImageView
            android:id="@+id/pImageIv"
            android:background="#FFFFFF"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#F5F0F0"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <Button
                android:id="@+id/commentBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/comment"
                android:background="@drawable/button_all"/>
        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>